projects/vb6parse/snapshots/parsers/cst/invalid_syntax/invalid_literals/multiple_decimal_points_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/invalid_literals.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nSub Test()\\n    Dim value As Double\\n    value = 123.456.789\\nEnd Sub\\n\", error_offset: 59, line_start: 4, line_end: 5, kind: Parser(UnexpectedTokens { expected: [\"statement\"], found: [IntegerLiteral] }), severity: Error, labels: [], notes: [] }"
